--- a/css-feladatok-admin/css/main.css
+++ b/css-feladatok-admin/css/main.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 .header--dark {
     background-color: rgb(51, 57, 64);
     color:rgb(236, 236, 236);
@@ -38,4 +42,100 @@
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     border: none;
+}
+
+main {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+}
+
+.main__nav {
+    background-color: rgb(33, 37, 41);
+    height: 100vh;
+}
+
+.main__nav ul {
+    margin: 0;
+    padding-left: 20px;
+}
+
+.main__nav a {
+    text-decoration: none;
+    color:rgb(143, 139, 139);
+}
+
+.main__nav li {
+    list-style-type: none;
+}
+
+.main__nav i {
+    padding-right: 5px;
+}
+
+.nav__li {
+    padding: 14px 0;
+}
+
+.nav__title {
+    padding: 30px 0 18px 0;
+}
+
+.nav__link--actual {
+    color:rgb(236, 236, 236);
+}
+
+.content__h1 {
+    margin: 25px 20px 10px 20px;
+    font-size: 2.5rem;
+    color: rgb(33, 37, 41);
+}
+
+.main__breadcrumb {
+    margin: 0 20px 15px 20px;
+    background-color: rgb(233,236,239);
+    border-radius: .25rem;
+    padding: 1rem 1.5rem;
+    color: rgb(33, 37, 41);
+}
+
+.main__cards {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.main__card {
+    margin: 20px;
+    color:rgb(236, 236, 236);
+    border-radius: .25rem;
+}
+
+.card__top {
+    padding: 1.75rem 1rem;
+}
+
+.card__bottom {
+    padding: 1rem;
+    box-shadow: inset 0 0 6px rgb(33, 37, 41, 0.4);
+    border-bottom-left-radius: .25rem;
+    border-bottom-right-radius: .25rem;
+}
+
+.main__card--blue {
+    background-color: rgb(0,123,255);
+}
+
+.main__card--yellow {
+    background-color: rgb(255,193,7);
+}
+
+.main__card--green {
+    background-color: rgb(40,167,69);
+}
+
+.main__card--red {
+    background-color: rgb(220,53,69);
+}
+
+.fa-chevron-right {
+    float: right;
 }
