--- a/css-feladatok-admin/css/main.css
+++ b/css-feladatok-admin/css/main.css
@@ -33,6 +33,13 @@ body {
     margin-right: 0;
 }
 
+.search__input:hover {
+    border-color: rgb(255, 49, 193);
+    -webkit-transition: border .15s linear;
+    -ms-transition: border .15s linear;
+    transition: border .15s linear;
+}
+
 .search__btn {
     background-color: rgb(0, 123, 255);
     color:rgb(236, 236, 236);
@@ -107,6 +114,13 @@ main {
     margin: 20px;
     color:rgb(236, 236, 236);
     border-radius: .25rem;
+}
+
+.main__card:hover {
+    background-color: rgb(90, 209, 183);
+    -webkit-transition: background-color .3s linear;
+    -ms-transition: background-color .3s linear;
+    transition: background-color .3s linear;
 }
 
 .card__top {
