--- a/css-feladatok-admin/css/main.css
+++ b/css-feladatok-admin/css/main.css
@@ -153,3 +153,17 @@ main {
 .fa-chevron-right {
     float: right;
 }
+
+@media (max-width: 700px) {
+    .main__cards {
+        display: grid;
+        grid-template-columns: unset;
+    }
+    main {
+        display: grid;
+        grid-template-columns: 1fr 6fr;
+    }
+    .nav__text {
+        display: none;
+    }
+}
